change to getFirst()
inline the variable